[tool.poetry]
name = "dsd"
version = "0.1.0"
description = ""
authors = ["a-chernousov <andreu04032004@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
